--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<a href="#" routerLink="/sidebar"> Sign Up</a>
+<a href="#" routerLink="/sidebar"> Dashboard</a><a href="#" routerLink="/register"> Sign Up</a>
 <div class="login-bg">
 <div class="container">
     <div class="row">
