--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -18,4 +18,110 @@
     <p><button mat-button (click)="sidenav.toggle()"><i class="fa fa-arrow-circle-down"></i>></button></p>
     </mat-sidenav-content>
 </mat-sidenav-container>
+ <div class="header d-flex justify-content-end">
+    <div class="user-list text-center">
+        <div class="prof-thumb">
+          <img src="./assets/images/profile.png" class="full-width" alt="profile">
+          </div>
+          
+      </div>
+ </div>
+<div class="content-wrap left-space">
+    <div class="row justify-content-lg-between" style="margin: 0 !important;">
+    <div class="col-md-5"><h1>Process Trade Documents</h1></div>
+    <div class="col-md-4" style="float: right;">
+      <div class="search-panel">
+        <form action="">
+          <div class="p-1 bg-light rounded rounded-pill shadow-sm mb-4">
+            <div class="input-group">
+              <input type="search" placeholder="What're you searching for?" aria-describedby="button-addon1" class="form-control border-0 bg-light">
+              <div class="input-group-append">
+                <button id="button-addon1" type="submit" class="btn btn-link text-primary"><i class="fa fa-search"></i></button>
+              </div>
+            </div>
+          </div>        
+        </form>
+      </div>
+    </div>
+</div>
+    <table id="dtBasicExample" class="table table-striped dataTable" cellspacing="0" width="100%" role="grid" aria-describedby="dtBasicExample_info" style="width: 100%;">
+      <thead>
+        <tr role="row"><th class="th-sm sorting" tabindex="0" aria-controls="dtBasicExample" rowspan="1" colspan="1" style="width: 135.2px;">PO Number
+          </th><th class="th-sm sorting" tabindex="0" aria-controls="dtBasicExample" rowspan="1" colspan="1"   style="width: 211.2px;">PI Number
+          </th><th class="th-sm sorting_desc" tabindex="0" aria-controls="dtBasicExample" rowspan="1" colspan="1"   style="width: 115px;" aria-sort="descending">Buyer
+          </th><th class="th-sm sorting" tabindex="0" aria-controls="dtBasicExample" rowspan="1" colspan="1" style="width: 110px;">Seller
+          </th><th class="th-sm sorting" tabindex="0" aria-controls="dtBasicExample" rowspan="1" colspan="1"   style="width: 165px;">Desccription of Good
+          </th>
+          <th class="th-sm sorting" tabindex="0" aria-controls="dtBasicExample" rowspan="1" colspan="1" aria-label="Salary
+          : activate to sort column ascending" style="width: 89.2px;">Quantity
+          </th>
+          <th class="th-sm sorting" tabindex="0" aria-controls="dtBasicExample" rowspan="1" colspan="1"   style="width: 89.2px;">Total
+          </th>
+          <th align="center" class="th-sm sorting" tabindex="0" aria-controls="dtBasicExample" rowspan="1" colspan="1"   style="width: 89.2px; text-align: center;">Rate/Unit
+          </th>
+          <th align="center" class="th-sm sorting" tabindex="0" aria-controls="dtBasicExample" rowspan="1" colspan="1"   style="width: 89.2px; text-align: center;">TFC
+          </th>
+        </tr>
+          
+      </thead>
+      <tbody>
+      <tr role="row" class="odd">
+          <td class="">134</td>
+          <td>456852 </td>
+          <td class="sorting_1">Abhisek</td>
+          <td>Ganesh</td>
+          <td>LOrem Ipsum Dolor</td>
+          <td>55</td>
+          <td>80</td>
+          <td>5</td>
+          <td>EYE</td>           
+        </tr>
+        <tr role="row" class="odd">
+            <td class="">134</td>
+            <td>456852 </td>
+            <td class="sorting_1">Abhisek</td>
+            <td>Ganesh</td>
+            <td>LOrem Ipsum Dolor</td>
+            <td>55</td>
+            <td>80</td>
+            <td>5</td>
+            <td>EYE</td>           
+          </tr>
+          <tr role="row" class="odd">
+            <td class="">134</td>
+            <td>456852 </td>
+            <td class="sorting_1">Abhisek</td>
+            <td>Ganesh</td>
+            <td>LOrem Ipsum Dolor</td>
+            <td>55</td>
+            <td>80</td>
+            <td>5</td>
+            <td>EYE</td>           
+          </tr>
+          <tr role="row" class="odd">
+            <td class="">134</td>
+            <td>456852 </td>
+            <td class="sorting_1">Abhisek</td>
+            <td>Ganesh</td>
+            <td>LOrem Ipsum Dolor</td>
+            <td>55</td>
+            <td>80</td>
+            <td>5</td>
+            <td>EYE</td>           
+          </tr>
+          <tr role="row" class="odd">
+            <td class="">134</td>
+            <td>456852 </td>
+            <td class="sorting_1">Abhisek</td>
+            <td>Ganesh</td>
+            <td>LOrem Ipsum Dolor</td>
+            <td>55</td>
+            <td>80</td>
+            <td>5</td>
+            <td>EYE</td>           
+          </tr>
+        </tbody>
+       
+    </table>
+  </div>
    
